Adjusted some swagger documentation.
