# server/common/api.yml
@@ -21,7 +21,6 @@ definitions:
     type: object
     title: Animal
     required:
-      - name
       - type
       - gender
       - breed
@@ -34,8 +33,11 @@ definitions:
     properties:
       id:
         type: integer
+        example: 1
+        readOnly: true
       name:
         type: string
+        nullable: true
         example: 'Pepe'
       image:
         type: file
@@ -50,7 +52,7 @@ definitions:
         example: 'Akita'
       birthdate:
         type: "string"
-        format: "date-time"
+        format: "date"
       zone:
         type: string
         example: 'Buceo'
@@ -98,6 +100,10 @@ paths:
       tags:
         - Animals
       description: Create a new animal for adopt
+      consumes:
+      - "multipart/form-data"
+      produces:
+      - "application/json"
       parameters:
         - name: Animal
           in: body
@@ -105,6 +111,11 @@ paths:
           required: true
           schema: 
             $ref: "#/definitions/Animal"
+        - name: "image"
+          in: "formData"
+          description: "Animal image to upload"
+          required: false
+          type: "file"
       responses:
         200:
           description: Returns new created animal
