# server/repository/IAnimal.ts
@@ -18,8 +18,8 @@ export interface IAnimalContact {
 
 export interface IAnimal {
     id: number;
-    name: string;
-    image: string;
+    name?: string;
+    image?: string;
     type: AnimalType;
     gender: AnimalGender;
     breed: string;
